--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,9 @@
     "swiper": "^12.0.2"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.13",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.20"
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   },
   "main": "index.js",
   "keywords": [],
