--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,10 @@
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
-    "swiper": "^12.0.2"
-  },
-  "devDependencies": {
+    "swiper": "^12.0.2",
+    "tailwindcss": "^3.4.19",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.13"
+    "postcss": "^8.4.38"
   },
   "main": "index.js",
   "keywords": [],
